# attestation-rollup

./: .gitignore  LICENSE  README.md
counter/: db.sqlite  deployment.json  stackr.config.ts
counter/test/: test-requests.ts
frontend-camera-attestor-mobile-app/: App.tsx  README.md  app.json  index.js  package-lock.json  package.json  react-native.config.js
frontend-camera-attestor-mobile-app/android/: build.gradle  gradle.properties  settings.gradle
frontend-camera-attestor-mobile-app/android/app/: build.gradle
frontend-camera-attestor-mobile-app/ios/: Podfile  link-assets-manifest.json
frontend-camera-attestor-mobile-app/ios/ETHIndia2023/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
frontend-camera-attestor-mobile-app/ios/ETHIndia2023.xcodeproj/: project.pbxproj
frontend-camera-attestor-mobile-app/ios/ETHIndia2023.xcworkspace/: contents.xcworkspacedata
frontend-history-explorer/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend-history-explorer/src/app/: page.js
frontend-image-edit/: package-lock.json  package.json
frontend-image-edit/public/: index.html
frontend-image-edit/src/: App.css  App.js  index.css
frontend-journalism-app/: package-lock.json  package.json
frontend-journalism-app/src/: App.js  index.css
prover/: Cargo.toml  README.md
prover/cache/: solidity-files-cache.json
prover/methods/guest/: Cargo.toml
rollup/: .gitignore  README.md  bun.lockb  db.sqlite  deployment.json  genesis-state.json  package-lock.json  package.json
rollup/src/: index.ts  state.ts  test.ts
(+32 files in other folders)
